<resources>
    <string name="app_name">My Food</string>
    <string name="hello">Hello,</string>
    <string name="igor_nobre">Igor Nobre</string>
    <string name="favoritos">Favoritos</string>
    <string name="categorias">Categorias</string>
    <string name="nome_alimento">Nome Alimento</string>
    <string name="close">close</string>
    <string name="receita">Receita</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="modo_de_preparo">Modo de preparo</string>
    <string name="receitas">Receitas</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="login">login</string>
    <string name="ja_tenho_cadastro">Já tenho cadastro</string>
    <string name="username">Username</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="favorito">Favorito</string>
    <string name="cadastrado_realizado_com_sucesso">Cadastro realizado com sucesso!</string>
    <string name="usuario_ou_senha_incorretos">Usuario ou senha incorreta</string>
    <string name="editar">Editar</string>
    <string name="editado_com_sucesso">Editado com sucesso</string>
</resources>
