<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presantation.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <TextView
                android:id="@+id/textViewHomeHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/hello"
                android:textColor="@color/colorClara"
                android:textSize="26sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewHomeNome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/igor_nobre"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeHello" />

            <TextView
                android:id="@+id/textViewHomeFavoritos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/favoritos"
                android:textColor="@color/colorClara"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeNome" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyViewHomeFavoritos"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeFavoritos"
                tools:itemCount="20"
                tools:listitem="@layout/item_home_favoritos" />

            <TextView
                android:id="@+id/textViewHomeCategorias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/categorias"
                android:textColor="@color/colorClara"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/recyViewHomeFavoritos" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyViewHomeCategorias"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewHomeCategorias"
                tools:listitem="@layout/item_home_categorias"
                tools:itemCount="50"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</FrameLayout>